config lại mail, otp + add get user bằng email

--- a/backend/library-mgt/src/main/resources/application.properties
+++ b/backend/library-mgt/src/main/resources/application.properties
@@ -13,7 +13,9 @@ springdoc.api-docs.path=/api-docs
 springdoc.server-url=http://localhost:8080
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+spring.main.allow-bean-definition-overriding=true
 
+#c?u hình email
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.username=cvvq610@gmail.com
@@ -24,6 +26,18 @@ spring.mail.test-connection=false
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.excluded-view-names= # comma-separated list of view names   that should be excluded from resolution
+spring.thymeleaf.view-names= # comma-separated list of view names that can be resolved
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html # ;charset=<encoding> is added
+spring.thymeleaf.cache=true
+
 mail.sender=cvvq610@gmail.com
 mail.password=zvpo gjhb kxjn bzdm
+
+#th?i gian reset otp
 otp.valid.minutes = 2
